--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "todo-ts",
+  "homepage": "https://kumang-subba.github.io/todo-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
@@ -20,6 +23,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-svgr": "^2.4.0"
